# better-markers

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  buildspec.json
.github/actions/build-plugin/: action.yaml
.github/actions/package-plugin/: action.yaml
.github/actions/run-gersemi/: action.yaml  requirements.txt
.github/scripts/: .Aptfile  package-ubuntu
.github/scripts/utils.zsh/: check_ubuntu  setup_ubuntu
.github/workflows/: build-project.yaml  dispatch.yaml  manual-release.yaml  pr-pull.yaml  push.yaml
cmake/common/: bootstrap.cmake  buildspec_common.cmake
cmake/linux/: defaults.cmake  helpers.cmake
cmake/macos/: helpers.cmake
cmake/windows/: defaults.cmake  helpers.cmake
data/locale/: an-ES.ini  ar-SA.ini  az-AZ.ini  be-BY.ini  bg-BG.ini  bn-BD.ini  ca-ES.ini  cs-CZ.ini  da-DK.ini  de-DE.ini  el-GR.ini  en-GB.ini  en-US.ini  es-ES.ini  et-EE.ini  eu-ES.ini  fa-IR.ini  fi-FI.ini  fil-PH.ini  fr-FR.ini  gd-GB.ini  gl-ES.ini  he-IL.ini  hi-IN.ini  hr-HR.ini  hu-HU.ini  hy-AM.ini  id-ID.ini  it-IT.ini  ja-JP.ini  ka-GE.ini  kab-KAB.ini  kmr-TR.ini  ko-KR.ini  lo-LA.ini  ms-MY.ini  nb-NO.ini  nl-NL.ini  pl-PL.ini  pt-BR.ini  (+17 more)
docs/: focus-qa-checklist.md  research-notes.md
scripts/dev/: build-install.sh  configure.sh  run-obs-with-rundir.sh  watch-install.sh
src/: bm-colors.cpp  bm-colors.hpp  bm-fcpxml-writer.cpp  bm-fcpxml-writer.hpp  bm-final-cut-fcpxml-sink.cpp  bm-final-cut-fcpxml-sink.hpp  bm-focus-policy.hpp  bm-hotkey-registry.cpp  bm-hotkey-registry.hpp  bm-localization.hpp  bm-marker-controller.cpp  bm-marker-controller.hpp  bm-marker-data.hpp  bm-marker-dialog.cpp  bm-marker-dialog.hpp  bm-marker-export-sink.hpp  bm-models.cpp  bm-models.hpp  bm-mp4-mov-embed-engine.cpp  bm-mp4-mov-embed-engine.hpp  bm-premiere-xmp-sink.cpp  bm-premiere-xmp-sink.hpp  bm-recording-session-tracker.cpp  bm-recording-session-tracker.hpp  bm-recovery-queue.cpp  bm-recovery-queue.hpp  bm-resolve-fcpxml-sink.cpp  bm-resolve-fcpxml-sink.hpp  bm-scope-store.cpp  bm-scope-store.hpp  bm-settings-dialog.cpp  bm-settings-dialog.hpp  bm-startup-recovery-policy.hpp  bm-synthetic-keypress-linux.cpp  bm-synthetic-keypress-macos.mm  bm-synthetic-keypress-win.cpp  bm-synthetic-keypress.cpp  bm-synthetic-keypress.hpp  bm-template-editor-dialog.cpp  bm-template-editor-dialog.hpp  (+8 more)
tests/: config-tests.cpp  embed-engine-tests.cpp  fcpxml-tests.cpp
