cmake_minimum_required(VERSION 3.28...3.30)

include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/common/bootstrap.cmake" NO_POLICY_SCOPE)

project(${_name} VERSION ${_version})

option(ENABLE_FRONTEND_API "Use obs-frontend-api for UI functionality" ON)
option(ENABLE_QT "Use Qt functionality" ON)

include(compilerconfig)
include(defaults)
include(helpers)

add_library(${CMAKE_PROJECT_NAME} MODULE)

find_package(libobs REQUIRED)
target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE OBS::libobs)

if(ENABLE_FRONTEND_API)
  find_package(obs-frontend-api REQUIRED)
  if(APPLE)
    target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/.deps/lib/obs-frontend-api.dylib")
    target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/.deps/include/obs")
  else()
    target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE OBS::obs-frontend-api)
  endif()
endif()

if(ENABLE_QT)
  if(APPLE)
    set(QT_FRAMEWORK_DIR "${CMAKE_CURRENT_SOURCE_DIR}/.deps/obs-deps-qt6-2025-07-11-universal/lib")
    target_include_directories(
      ${CMAKE_PROJECT_NAME}
      PRIVATE
        "${QT_FRAMEWORK_DIR}/QtCore.framework/Headers"
        "${QT_FRAMEWORK_DIR}/QtGui.framework/Headers"
        "${QT_FRAMEWORK_DIR}/QtWidgets.framework/Headers"
        "${CMAKE_CURRENT_SOURCE_DIR}/.deps/obs-deps-qt6-2025-07-11-universal/mkspecs/macx-clang"
        "${CMAKE_CURRENT_SOURCE_DIR}/.deps/obs-deps-qt6-2025-07-11-universal/include"
    )
    target_link_options(
      ${CMAKE_PROJECT_NAME}
      PRIVATE "-F${QT_FRAMEWORK_DIR}" "-iframework${QT_FRAMEWORK_DIR}"
    )
    target_compile_options(
      ${CMAKE_PROJECT_NAME}
      PRIVATE "-F${QT_FRAMEWORK_DIR}" "-iframework${QT_FRAMEWORK_DIR}"
    )
    target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE "-framework QtCore" "-framework QtGui" "-framework QtWidgets")
  else()
    find_package(Qt6 COMPONENTS Widgets Core)
    target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE Qt6::Core Qt6::Widgets)
  endif()
  target_compile_options(
    ${CMAKE_PROJECT_NAME}
    PRIVATE $<$<C_COMPILER_ID:Clang,AppleClang>:-Wno-quoted-include-in-framework-header -Wno-comma>
  )
endif()

target_sources(
  ${CMAKE_PROJECT_NAME}
  PRIVATE
    src/plugin-main.c
    src/bm-models.cpp
    src/bm-models.hpp
    src/bm-scope-store.cpp
    src/bm-scope-store.hpp
)

if(ENABLE_QT)
  target_compile_definitions(${CMAKE_PROJECT_NAME} PRIVATE BETTER_MARKERS_QT=1)
endif()

set_target_properties_plugin(${CMAKE_PROJECT_NAME} PROPERTIES OUTPUT_NAME ${_name})
